--- a/style.css
+++ b/style.css
@@ -34,14 +34,15 @@ h1{
 
 .contenedor{
     
-    width: 100wh;
-    
     height: 100vh;
+
+    width: 100vw;
     
     display: flex;
     
     flex-wrap: wrap;
     
+    justify-content: center;
 }
 
 .carta{
@@ -54,13 +55,11 @@ h1{
     
     font-size: 50px;
     
-    text-shadow: 1px 1px 1px gray;
+    text-shadow: 1px 3px 6px white;
     
-    height: 300px;
+    height: 250px;
 
-    width: 300px;
-
-    /* border: 4px solid red; */
+    width: 30%;
 
     margin: 10px;
 
@@ -80,6 +79,31 @@ body{
 
     background-size: 300% 300%;
 
-    animation: moveBg 10s ease infinite;
+    animation: moveBg 15s ease infinite;
 
+}
+
+.contador{
+    
+    display: flex;
+
+    justify-content: center;
+
+    color: white;
+
+    font-size: 20px;
+
+}
+
+.oculto{
+
+    background-color: aqua;
+
+    color: transparent;
+
+    height: 300px;
+
+    width: 300px;
+
+    margin: 10px;
 }
