--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ h1{
 
 .contenedor{
     
-    height: 100vh;
+    max-height: 100vh;
 
-    width: 100vw;
+    max-width: 100vw;
     
     display: flex;
     
@@ -57,9 +57,9 @@ h1{
     
     text-shadow: 1px 3px 6px white;
     
-    height: 250px;
+    height: 200px;
 
-    width: 30%;
+    width:30%;
 
     margin: 10px;
 
